# stoner_measurement

./: .codacy.yaml  .gitignore  .markdownlint.json  AGENTS.md  README.md  TODO,nd  TODO.md  environment-pyqt5.yml  environment-pyqt6.yml  environment.yml  path_to_dummy_plugin_file.py  pyproject.toml  test_segfault.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml  tests.yml
codacy-reports/: issues-summary.md  issues.csv  issues.json
conda-recipe/: meta.yaml
conda-recipe/Menu/: menu-windows.json
docs/: conf.py  console_api.rst  contributing.rst  index.rst  installation.rst  plugin_tab_ordering.rst  round_dial_widget.rst  simulated_instruments.rst  testing_restructure_plan.md  third_party_plugins.rst  usage.rst
docs/api/: core.rst  index.rst  instruments.rst  plugins.rst  ui.rst
notes/: IPS120 Commands.md  ITC503 Commands.md  Lakeshore 625.md  Leybold Centre-three.md  MKS_controller_common_API.md  PR4000B-S_driver_guide.md  PSR1A-PSR4A_driver_guide.md  eurotherm.md  incremental_save.md  keithley_2400.md  lakeshore_temp_controllers.md  manget_power_supplies.md  mdx500_micropython_scpi_firmware_spec.md  mdx500_pico_interface_circuit.md  mdx500_serial_io_reverse_engineering.md  micropython_scpi_framework_improvements.md  motor-control.md  testing_guidelines.md  testing_restructure_plan.md
src/stoner_measurement/: __init__.py  app.py  app_config.py  config_utils.py  desktop_integration.py  display_names.py  main.py  qt_compat.py  resources.py  round_dial_demo.py
src/stoner_measurement/conf/: __init__.py  application.yaml  magnet_controller.yaml  motor_controller.yaml  temperature_controller.yaml  toolbar.yaml
src/stoner_measurement/conf/instruments/: oxford_itc503.yaml
src/stoner_measurement/conf/plugins/: __init__.py  dummy.yaml  k6221_dc_iv.yaml
src/stoner_measurement/conf/sequences/: sequence_template.json
src/stoner_measurement/core/: __init__.py  plugin_manager.py  runner.py  sequence.py  sequence_engine.py  serializer.py
src/stoner_measurement/instruments/: __init__.py  addressing.py  base_instrument.py  current_source.py  dmm.py  driver_manager.py  electrometer.py  errors.py  lock_registry.py  lockin_amplifier.py  magnet_controller.py  mass_flow_controller.py  motor_controller.py  nanovoltmeter.py  pressure_controller.py  simulated.py  source_meter.py  stepper_motor_controller.py  temperature_controller.py
src/stoner_measurement/instruments/eurotherm/: __init__.py  temperature_controllers.py
src/stoner_measurement/instruments/keithley/: __init__.py  k2000.py  k2182.py  k2400.py  k6221.py  k651x.py
src/stoner_measurement/instruments/lakeshore/: __init__.py  current_sources.py  lia.py  ls525.py  ls625.py  temperature_controllers.py
src/stoner_measurement/instruments/leybold/: __init__.py  pressure_controllers.py
src/stoner_measurement/instruments/mks/: __init__.py  controllers.py
src/stoner_measurement/instruments/oxford/: __init__.py  ips120.py  mercury_ips.py  temperature_controllers.py
src/stoner_measurement/instruments/protocol/: __init__.py  base.py  lakeshore.py  leybold.py  mks.py  modbus.py  oxford.py  scpi.py
src/stoner_measurement/instruments/srs/: __init__.py  sr830.py
src/stoner_measurement/instruments/thorlabs/: __init__.py  _kinesis_base.py  hdr50.py  kdc101_kprmte.py
src/stoner_measurement/instruments/transport/: __init__.py  base.py  gpib_transport.py  (+4 more)
src/stoner_measurement/magnet_control/: __init__.py  config.py  engine.py  pubsub.py  types.py
src/stoner_measurement/motor_control/: __init__.py  config.py  engine.py  pubsub.py  types.py
src/stoner_measurement/plugins/: __init__.py  base_plugin.py  command.py  counter.py  dummy.py  monitor.py  plugin_config.py  sequence_plugin.py  state_control.py  trace.py  transform.py
src/stoner_measurement/pressure_control/: __init__.py  config.py  engine.py  pubsub.py  types.py
src/stoner_measurement/scan/: __init__.py  arbitrary_function_generator.py  base.py  function_generator.py  list_generator.py  ramp_generator.py  stepped_generator.py
src/stoner_measurement/sweep/: __init__.py  base.py  monitor_and_filter_generator.py  multisegment_ramp_generator.py
src/stoner_measurement/temperature_control/: __init__.py  config.py  engine.py  pubsub.py  types.py
src/stoner_measurement/ui/: __init__.py  axis_mappings.py  config_panel.py  console_widget.py  dock_panel.py  editor_widget.py  engine_status_indicators.py  icons.py  log_viewer.py  magnet_panel.py  main_window.py  motor_panel.py  plot_widget.py  pressure_panel.py  script_tab.py  sequence_tab.py  settings_dialog.py  temperature_panel.py  theme.py  time_utils.py  value_watch.py  visa_resource_widget.py
tests/: conftest.py  test_app_config.py  test_arbitrary_function_scan_generator.py  test_base_plugin.py  test_command_plugin.py  test_controller_state_plugins.py  test_curve_fit_plugin.py  test_dataframe_trace_plugin.py  test_dummy_plugin.py  test_instrument_driver_manager.py  test_instruments.py  test_k6221_2182a_plugin.py  test_k6221_multi_sr830_plugin.py  test_keithley_2400_plugin.py  test_keithley_2400_point_scan_plugin.py  test_list_scan_generator.py  test_log_viewer.py  test_logging_support.py  test_magnet_control.py  test_magnetic_field_monitor_plugin.py  test_motor_control.py  test_motor_controller.py  test_motor_monitor_plugin.py  test_new_ui_widgets.py  test_percent_slider.py  test_plugin_config.py  test_plugin_manager.py  test_plugin_subtypes.py  test_pressure_control.py  test_pressure_monitor_plugin.py  test_ramp_scan_generator.py  test_resources.py  test_round_dial.py  test_runner.py  test_scan_generators.py  test_sequence.py  test_sequence_engine.py  test_serializer.py  test_si_combo_box.py  test_state_sweep_plugin.py  (+8 more)
tests/data/: test-sequence.json  toolbar.yaml
tests/integration/app/: test_main_window.py
tests/unit/: test_generator_display_names.py
tests/unit/instruments/: test_driver_display_names.py  test_driver_manager_mks.py
tests/unit/plugins/: test_reported_outputs.py
tests/unit/scan/: test_list_scan_generator.py  test_scan_generators.py  test_stepped_scan_generator.py
(+128 files in other folders)
