[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "stoner_measurement"
version = "0.1.0"
description = "A Python/Qt (PyQt5/PyQt6 via qtpy) application for running scientific measurements"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Gavin Burnell", email = "g.burnell@leeds.ac.uk"},
]
keywords = ["scientific", "measurement", "Qt", "PyQt5", "PyQt6", "pyqtgraph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "asteval>=1.0",
    "black>=24.1",
    "ipykernel>=6.0",
    "jupyter_client>=8.0",
    "pandas>=2.0",
    "h5py>=3.10",
    "pathspec>=1.1.1",
    "platformdirs>=4.9",
    "PyYAML>=6.0",
    "qtpy>=2.4",
    "pyqtgraph>=0.13",
    "qtconsole>=5.5",
    "numpy>=2.0",
    "scipy>=1.10",
]

[project.optional-dependencies]
pyqt5 = [
    "PyQt5>=5.15",
]
pyqt6 = [
    "PyQt6>=6.7",
]
docs = [
    "sphinx>=8.0",
    "sphinx-automodapi>=0.16",
    "sphinx-better-theme>=0.1.5",
]
instruments = [
    "pylablib>=1.4",
    "pyserial>=3.5",
    "pyvisa>=1.13",
]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "pytest-cov>=6.0",
    "pyserial>=3.5",
    "pyvisa>=1.13",
    "ruff>=0.8",
]

[project.scripts]
stoner-measurement = "stoner_measurement.main:main"
stoner-measurement-install-menu = "stoner_measurement.desktop_integration:main"
stoner-measurement-round-dial-demo = "stoner_measurement.round_dial_demo:main"

[project.entry-points."stoner_measurement.plugins"]
counter = "stoner_measurement.plugins.state_scan.counter:CounterPlugin"
magnet_controller_scan = "stoner_measurement.plugins.state_scan.magnet_controller:MagnetControllerScanPlugin"
k2400_point_scan = "stoner_measurement.plugins.state_scan.keithley_2400:Keithley2400PointScanPlugin"
temperature_controller_scan = "stoner_measurement.plugins.state_scan.temperature_controller:TemperatureControllerScanPlugin"
motor_controller_scan = "stoner_measurement.plugins.state_scan.motor_controller:MotorControllerScanPlugin"
sweep_time = "stoner_measurement.plugins.state_sweep.sweep_time:SweepTimePlugin"
magnet_controller_sweep = "stoner_measurement.plugins.state_sweep.magnet_controller:MagnetControllerSweepPlugin"
temperature_controller_sweep = "stoner_measurement.plugins.state_sweep.temperature_controller:TemperatureControllerSweepPlugin"
motor_controller_sweep = "stoner_measurement.plugins.state_sweep.motor_controller:MotorControllerSweepPlugin"
curve_fit = "stoner_measurement.plugins.transform.curve_fit:CurveFitPlugin"
fourier_transform = "stoner_measurement.plugins.transform.fourier_transform:FourierTransformPlugin"
savgol_filter = "stoner_measurement.plugins.transform.savgol_filter:SavitzkyGolayPlugin"
window_filter = "stoner_measurement.plugins.transform.window_filter:WindowFilterPlugin"
dummy = "stoner_measurement.plugins.trace.dummy:DummyPlugin"
dataframe_trace = "stoner_measurement.plugins.trace.dataframe_trace:DataFrameTracePlugin"
k6221_dc_iv = "stoner_measurement.plugins.trace.k6221_2182a:Keithley6221_2182APlugin"
k6221_multi_sr830 = "stoner_measurement.plugins.trace.k6221_multi_sr830:Keithley6221_MultiSR830Plugin"
k2400_dc_iv = "stoner_measurement.plugins.trace.keithley_2400:Keithley2400SweepPlugin"
plot_clear = "stoner_measurement.plugins.command.plot_clear:PlotClearCommand"
plot_points = "stoner_measurement.plugins.command.plot_points:PlotPointsCommand"
plot_trace = "stoner_measurement.plugins.command.plot_trace:PlotTraceCommand"
save = "stoner_measurement.plugins.command.save:SaveCommand"
wait = "stoner_measurement.plugins.command.wait:WaitCommand"
status = "stoner_measurement.plugins.command.status:StatusCommand"
alert = "stoner_measurement.plugins.command.alert:AlertCommand"
if_command = "stoner_measurement.plugins.command.if_command:IfCommand"
details = "stoner_measurement.plugins.command.details:DetailsCommand"
magnetic_field_monitor = "stoner_measurement.plugins.monitor.magnet_controller:MagneticFieldMonitorPlugin"
temperature_monitor = "stoner_measurement.plugins.monitor.temperature_controller:TemperatureMonitorPlugin"
motor_angle_monitor = "stoner_measurement.plugins.monitor.motor_controller:MotorAngleMonitorPlugin"
pressure_monitor = "stoner_measurement.plugins.monitor.pressure_controller:PressureMonitorPlugin"
pressure_set_flow = "stoner_measurement.plugins.command.pressure_set_flow:PressureSetFlowCommand"
pressure_gauge_channel = "stoner_measurement.plugins.command.pressure_gauge_channel:PressureGaugeChannelCommand"

[project.entry-points."stoner_measurement.instruments"]
mks_pr4000b_s = "stoner_measurement.instruments.mks:MKSPR4000BS"
mks_psr1a = "stoner_measurement.instruments.mks:MKSPSR1A"
mks_psr4a = "stoner_measurement.instruments.mks:MKSPSR4A"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"stoner_measurement.conf" = ["*.yaml", "instruments/*.yaml", "resources/*.png", "sequences/*.json"]
"stoner_measurement.conf.plugins" = ["*.yaml"]
"stoner_measurement.ui" = ["*.png", "resources/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.coverage.run]
source = ["stoner_measurement"]
branch = true

[tool.pylint.master]
ignore = ["tests"]
ignore-paths = ["^tests/"]

[tool.coverage.report]
show_missing = true

[tool.pylint.typecheck]
ignored-modules = [
    "pyqtgraph",
    "qtpy",
    "qtpy.QtCore",
    "qtpy.QtGui",
    "qtpy.QtWidgets",
    "PyQt6",
    "PyQt6.QtCore",
    "PyQt6.QtGui",
    "PyQt6.QtWidgets",
]

[tool.pylint.imports]
ignored-modules = ["pyqtgraph", "qtpy", "qtpy.QtCore", "qtpy.QtGui", "qtpy.QtWidgets"]

[tool.pylint.format]
max-line-length = 119

[tool.pylint.basic]
method-rgx = "([a-z_][a-z0-9_]*|[a-z]+(?:[A-Z][a-z0-9]+)+)$"

[tool.pylint.messages_control]
disable = [
    "attribute-defined-outside-init",
    "broad-exception-caught",
    "cyclic-import",
    "duplicate-code",
    "import-outside-toplevel",
    "protected-access",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    "unnecessary-ellipsis",
]
